engine/test/electron/scripts/lexer/errors/invalid_escapes_multiple.e
// ERROR TEST: Multiple invalid escapes
"bad \a escape"
"bad \b escape"
"bad \c escape"
"bad \d escape"
"bad \e escape"
"bad \f escape"
"bad \g escape"
"bad \h escape"
"bad \i escape"
"bad \j escape"
"bad \k escape"
"bad \l escape"
"bad \m escape"
"bad \o escape"
"bad \p escape"
"bad \q escape"
"bad \s escape"
"bad \u no digits"
"bad \x no digits"
"bad \xGG hex"
"bad \u12 short"
